arrumando front cliente e outras modificações no back

--- a/templates/html/pages/admin/clientes-admin.html
+++ b/templates/html/pages/admin/clientes-admin.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="bg-img d-flex align-items-center justify-content-center min-vh-100">
-    <div class="container bg-white rounded shadow p-4">
+    <div class="container bg-white rounded shadow p-4 mt-5 mb-5">
         <h1 class="text-center mb-4" style="font-size: 2.5rem;">Todos os clientes</h1>
         
         <table class="table table-striped">
