--- a/templates/html/pages/admin/eventos-admin.html
+++ b/templates/html/pages/admin/eventos-admin.html
@@ -8,8 +8,8 @@
 
    
         <div class="d-flex justify-content-end mb-4">
-            <a href="{{ url_for('gerar_relatorio_eventos') }}" class="btn btn-info me-2" style="font-size: 1.2rem;">Gerar relatório</a>
-            <a href="{{ url_for('novo_evento') }}" class="btn btn-primary" style="font-size: 1.2rem;">Novo evento</a>
+            <a href="{{ url_for('gerar_relatorio_eventos') }}" class="btn me-2" style="font-size: 1.2rem; background-color: #f8ac69;">Gerar relatório</a>
+            <a href="{{ url_for('novo_evento') }}" class="btn btn-login" style="font-size: 1.2rem;">Novo evento</a>
         </div>
 
     
