--- a/templates/html/pages/admin/mobilias-admin.html
+++ b/templates/html/pages/admin/mobilias-admin.html
@@ -6,13 +6,13 @@
     
     
     <div class="card p-5" style="width: 80%;">
-      <h1 class="text-center mb-5" style="font-size: 2.5rem;">Mobílias</h1>
+      <h1 class="text-center mb-2" style="font-size: 2.5rem;">Mobílias</h1>
       
       
       <div class="w-100 d-flex justify-content-end mb-3">
-        <a href="{{ url_for('mobilias_alugadas_admin') }}" method="GET" class="btn btn-info">Ver aluguéis</a>
+        <a href="{{ url_for('mobilias_alugadas_admin') }}" class="btn btn-info me-2">Ver aluguéis</a>
         <a href="{{ url_for('nova_mobilia_admin') }}" class="btn btn-primary">Adicionar mobília</a>
-      </div>
+    </div>
 
   
       <table class="table table-striped table-bordered">
