--- a/templates/html/pages/perfil.html
+++ b/templates/html/pages/perfil.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-
+{% extends "base.html" %}
 {% block content %}
 <body>
     <div class="bg-img d-flex align-items-center justify-content-center min-vh-100">
