--- a/templates/html/pages/admin/agendamentos-admin.html
+++ b/templates/html/pages/admin/agendamentos-admin.html
@@ -26,7 +26,7 @@
             <td class="text-center" style="font-size: 1.1rem;">{{ agendamento.nome_cliente }}</td>
             <td class="text-center" style="font-size: 1.1rem;">{{ agendamento.cpf }}</td>
             <td class="text-center">
-              <form action="{{ url_for('cancelar_agendamento') }}" method="POST" onsubmit="return confirmCancel()" class="d-inline">
+              <form action="{{ url_for('cancelar_agendamentos_admin') }}" method="POST" onsubmit="return confirmCancel()" class="d-inline">
                 <input type="hidden" name="data" value="{{ agendamento.data }}">
                 <input type="hidden" name="horario" value="{{ agendamento.horario }}">
                 <button type="submit" class="btn btn-light" style="font-size: 1rem;">Cancelar</button>
