--- a/templates/html/pages/cliente/agendamentos-cliente.html
+++ b/templates/html/pages/cliente/agendamentos-cliente.html
@@ -1,40 +1,46 @@
 {% extends "base.html" %}
 {% block content %}
-<h1 class="text-center">Meus agendamentos de visita</h1>
-<div class="container d-flex flex-column align-items-center">
-    <div class="d-flex justify-content-end mb-3 w-100">
-        <form action="{{ url_for('novo_agendamento') }}" method="GET">
-            <button type="submit" class="btn btn-primary">Agendar visita</button>
-        </form>
-    </div>
-    <table class="table table-striped">
-        <thead>
-          <tr>
-            <th scope="col" class="text-center">Data</th>
-            <th scope="col" class="text-center">Hora</th>
-            <th scope="col" class="text-center">Ações</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for agendamento in agendamentos %}
-          <tr>
-              <td class="text-center">{{ agendamento[0] | datetime('%d/%m/%Y') }}</td>
-              <td class="text-center">{{ agendamento[1] }}</td>
-              <td class="text-center">
-                <form action="{{ url_for('cancelar_agendamento') }}" method="POST" onsubmit="return confirmCancel()">
-                  <input type="hidden" name="data" value="{{ agendamento[0] }}">
-                  <input type="hidden" name="horario" value="{{ agendamento[1] }}">
-                  <button type="submit" class="btn btn-light">Cancelar</button>
+<div class="dash-img d-flex align-items-center justify-content-center min-vh-100">
+    <div class="container d-flex justify-content-center mt-2">
+        <div class="card p-4 shadow" style="width: 90%; max-width: 1200px;">
+            <h1 class="text-center mb-4">Meus agendamentos de visita</h1>
+            <div class="d-flex justify-content-end mb-4">
+                <form action="{{ url_for('novo_agendamento') }}" method="GET">
+                    <button type="submit" class="btn btn-primary">Agendar visita</button>
                 </form>
-              </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+            </div>
+            <div class="table-responsive mb-4">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col" class="text-center">Data</th>
+                            <th scope="col" class="text-center">Hora</th>
+                            <th scope="col" class="text-center">Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for agendamento in agendamentos %}
+                        <tr>
+                            <td class="text-center">{{ agendamento[0] | datetime('%d/%m/%Y') }}</td>
+                            <td class="text-center">{{ agendamento[1] }}</td>
+                            <td class="text-center">
+                                <form action="{{ url_for('cancelar_agendamento') }}" method="POST" onsubmit="return confirmCancel()">
+                                    <input type="hidden" name="data" value="{{ agendamento[0] }}">
+                                    <input type="hidden" name="horario" value="{{ agendamento[1] }}">
+                                    <button type="submit" class="btn btn-danger">Cancelar</button>
+                                </form>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
 <script>
-  function confirmCancel() {
-      return confirm("Você tem certeza que deseja cancelar este agendamento?");
-  }
+    function confirmCancel() {
+        return confirm("Você tem certeza que deseja cancelar este agendamento?");
+    }
 </script>
 {% endblock %}
