--- a/templates/html/pages/cliente/formulario-agendamento.html
+++ b/templates/html/pages/cliente/formulario-agendamento.html
@@ -1,23 +1,37 @@
 {% extends "base.html" %}
-{% block content %}  
+{% block content %}
 
-<div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="w-50 border p-4 rounded">
-        <h1 class="text-center mb-4">Agendar visita</h1>
-        <form action="{{ url_for('novo_agendamento') }}" method="POST">
-            <div class="form-group mb-3">
-                <label for="data">Data</label>
-                <input type="date" name="data" class="form-control" required>
-            </div>
-            <div class="form-group mb-3">
-                <label for="horario">Horário</label>
-                <input type="time" name="horario" class="form-control" id="horario" required>
-            </div>
-            <div class="d-flex justify-content-between">
-                <a href="{{ url_for('agendamentos_cliente') }}" class="btn btn-secondary">Voltar</a>
-                <button type="submit" class="btn btn-primary">Salvar</button>
-            </div>
-        </form>
+<div class="dash-img d-flex justify-content-center align-items-center vh-100">
+    <div class="w-50">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <div class="w-100 mb-4">
+                    {% for category, message in messages %}
+                        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
+        <div class="border p-4 rounded bg-white shadow">
+            <h1 class="text-center mb-4">Agendar visita</h1>
+            <form action="{{ url_for('novo_agendamento') }}" method="POST">
+                <div class="form-group mb-3">
+                    <label for="data">Data</label>
+                    <input type="date" name="data" class="form-control" required>
+                </div>
+                <div class="form-group mb-3">
+                    <label for="horario">Horário</label>
+                    <input type="time" name="horario" class="form-control" id="horario" required>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <a href="{{ url_for('agendamentos_cliente') }}" class="btn btn-secondary">Voltar</a>
+                    <button type="submit" class="btn btn-primary">Salvar</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
